<resources>
    <string name="app_name" translatable="false">TapTalk</string>
    <string name="tap_block_user">Block User</string>
    <string name="tap_blocked_list">Blocked List</string>
    <string name="tap_change_password">Change Password</string>
    <string name="tap_chats_and_contacts">Chats and Contacts</string>
    <string name="tap_clear_chat">Clear Chat</string>
    <string name="tap_conversation_color">Conversation Color</string>
    <string name="tap_leave_group">Leave Group</string>
    <string name="tap_delete_group">Delete Group</string>
    <string name="tap_forward">Forward</string>
    <string name="tap_group_details">Group Details</string>
    <string name="tap_group_subject">Group Subject</string>
    <string name="tap_my_account">My Account</string>
    <string name="tap_new_chat">New Chat</string>
    <string name="tap_new_contact">New Contact</string>
    <string name="tap_new_group">New Group</string>
    <string name="tap_notifications">Notifications</string>
    <string name="tap_recent">Recent</string>
    <string name="tap_recent_chats">Recent Chats</string>
    <string name="tap_register">Register</string>
    <string name="tap_report_group">Report Group</string>
    <string name="tap_report_user">Report User</string>
    <string name="tap_search_chat">Search Chat</string>
    <string name="tap_search_results">Search Results</string>
    <string name="tap_send_message">Send Message</string>
    <string name="tap_shared_media">Shared Media</string>
    <string name="tap_qr_code">QR Code</string>
    <string name="tap_scan_qr_code">Scan QR Code</string>
    <string name="tap_show_qr_code">Show QR Code</string>
    <string name="tap_user_details">User Details</string>
    <string name="tap_view_members">View Members</string>
    <string name="tap_welcome">Welcome</string>
    <string name="tap_chat_room_setting_up">Setting up your chat room</string>
    <string name="tap_chat_room_setup_success">Setup successful</string>
    <string name="tap_chat_room_setup_failed">Setup failed</string>
    <string name="tap_chat_room_setting_up_description">Make sure you have a stable connection</string>
    <string name="tap_chat_room_setup_success_description">You are all set and ready to go!</string>
    <string name="tap_chat_room_setup_failed_description">Retry Setup</string>
    <string name="tap_start_a_new_chat">Start a New Chat</string>
    <string name="tap_search_chat_placeholder">Chats, groups, and contacts</string>
    <string name="tap_search_chat_placeholder_chats_contacts">Chats and contacts</string>
    <string name="tap_search_chat_placeholder_chats_group">Chats and groups</string>
    <string name="tap_search_chat_placeholder_chats_only">Search for chats</string>
    <string name="tap_search_forward_placeholder">Search for chats or contacts</string>
    <string name="tap_clear_history">Clear history</string>
    <string name="tap_format_s_draft">Draft: %s</string>
    <string name="tap_format_ss_highlighted_string"><![CDATA[<font color=\'#%s\'>%s</font>]]></string>
    <string name="tap_send_a_message">Send a message…</string>
    <string name="tap_sending">Sending…</string>
    <string name="tap_sent_at">Sent at</string>
    <string name="tap_delivered_at">Delivered at</string>
    <string name="tap_forwarded">Forwarded</string>
    <string name="tap_from">From:</string>
    <string name="tap_no_chats_to_show">No chats to show</string>
    <string name="tap_delete_chat">Delete Chat</string>
    <string name="tap_this_deleted_message">This message was deleted.</string>
    <string name="tap_this_is_a_chat_history">This is a chat history</string>
    <string name="tap_this_user_is_no_longer_available">This user is no longer available</string>
    <string name="tap_typing">typing</string>
    <string name="tap_format_s_unread_messages">%s unread messages</string>
    <string name="tap_format_s_typing_single">%s is typing</string>
    <string name="tap_format_d_people_typing">%d people are typing</string>
    <string name="tap_unread_messages">Unread Messages</string>
    <string name="tap_you_deleted_this_message">You deleted this message.</string>
    <string name="tap_group_unavailable">Sorry, this group is unavailable.</string>
    <string name="tap_message_type_unsupported"><i>This message type is unsupported in the current app version.</i></string>
    <string name="tap_add_members">Add Members</string>
    <string name="tap_format_dd_selected_member_count">Group Members (%d/%d)</string>
    <string name="tap_format_d_group_member_count">%d Members</string>
    <string name="tap_group_name">Group Name</string>
    <string name="tap_group_picture">Group Picture</string>
    <string name="tap_create_group">Create Group</string>
    <string name="tap_edit_group">Edit Group</string>
    <string name="tap_change_avatar">Change Avatar</string>
    <string name="tap_group_members">Group Members</string>
    <string name="tap_remove_group_member">Remove Member</string>
    <string name="tap_clear_and_exit_chat">Clear and Exit Chat</string>
    <string name="tap_delete_chat_room">Delete Room</string>
    <string name="tap_type_group_name">Type group name</string>
    <string name="tap_cannot_add_more_people">Cannot add more people</string>
    <string name="tap_admin">Admin</string>
    <string name="tap_promote_admin">Promote to Admin</string>
    <string name="tap_demote_admin">Demote from Admin</string>
    <string name="tap_group_limit_reached">The max limit number of people in one group chat has been reached</string>
    <string name="tap_loading_members">Loading Members</string>
    <string name="tap_promote_admin_confirmation">Are you sure you want to promote this member to admin?</string>
    <string name="tap_demote_admin_confirmation">Are you sure you want to demote this admin?</string>
    <string name="tap_remove_member_confirmation">Are you sure you want to remove this member?</string>
    <string name="tap_remove_multiple_members_confirmation">Are you sure you want to remove selected members?</string>
    <string name="tap_leave_group_confirmation">All messages and shared medias from this room will be inaccessible. Are you sure you want to leave?</string>
    <string name="tap_delete_group_confirmation">All messages and shared medias from this room will be inaccessible. Are you sure you want to delete?</string>
    <string name="tap_adding">Adding…</string>
    <string name="tap_removing">Removing…</string>
    <string name="tap_updating">Updating…</string>
    <string name="tap_changes_saved">Changes Saved</string>
    <string name="tap_added_contact">Added to Contacts</string>
    <string name="tap_removed_member">Member Removed</string>
    <string name="tap_promoted_admin">Admin Promoted</string>
    <string name="tap_demoted_admin">Admin Demoted</string>
    <string name="tap_left_group">Left Group</string>
    <string name="tap_group_deleted">Group Deleted</string>
    <string name="tap_search_for_group_members">Search for members</string>
    <string name="tap_not_a_participant">You are no longer a participant in this group</string>
    <string name="tap_contacts">Contacts</string>
    <string name="tap_search_for_contacts">Search for contacts</string>
    <string name="tap_add_to_contacts">Add to Contacts</string>
    <string name="tap_chat_now">Chat Now</string>
    <string name="tap_global_search">Global Search</string>
    <string name="tap_cant_find_contact">Can’t find the contact you were looking for?</string>
    <string name="tap_cant_find_person">Can’t find who you are looking for?</string>
    <string name="tap_view_blocked_contacts">View Blocked Contacts</string>
    <string name="tap_search_by_username">Search by username</string>
    <string name="tap_format_s_no_result_found_for">No results found for \"%s\"</string>
    <string name="tap_try_different_search">Try a different search</string>
    <string name="tap_contact_list_empty">Your contact list seems empty…</string>
    <string name="tap_add_new_contact">Add New Contact</string>
    <string name="tap_this_is_you">This is you</string>
    <string name="tap_format_s_you_have_added_to_your_contacts"><![CDATA[You have added <b>%s</b> to your contacts]]></string>
    <string name="tap_is_already_in_your_contacts">is already in your contacts</string>
    <string name="tap_contact_access">Contact Access</string>
    <string name="tap_sync_contact_description">We need your permission to access your contact, we will sync your contact to our server and automatically find your friend so it is easier for you to find your friends.</string>
    <string name="tap_sync_contacts_now">Sync Contacts Now</string>
    <string name="tap_all_contacts_synced">All contacts synced</string>
    <string name="tap_format_d_synced_contacts">Synced %d Contacts</string>
    <string name="tap_syncing_contacts">Syncing Contacts</string>
    <string name="tap_unblock_user">Unblock User</string>
    <string name="tap_connected">Connected</string>
    <string name="tap_connecting">Connecting</string>
    <string name="tap_offline">Offline</string>
    <string name="tap_network_error">Network Error</string>
    <string name="tap_waiting_for_network">Waiting for Network</string>
    <string name="tap_active_now">Active now</string>
    <string name="tap_today">Today</string>
    <string name="tap_yesterday">Yesterday</string>
    <string name="tap_active_recently">Active recently</string>
    <string name="tap_format_s_sent_yesterday_at">Sent yesterday at %s</string>
    <string name="tap_format_d_minute_ago">Active %d minute ago</string>
    <string name="tap_format_d_minutes_ago">Active %d minutes ago</string>
    <string name="tap_format_d_hour_ago">Active %d hour ago</string>
    <string name="tap_format_d_hours_ago">Active %d hours ago</string>
    <string name="tap_format_s_active_yesterday_at">Active yesterday at %s</string>
    <string name="tap_active_yesterday">Active yesterday</string>
    <string name="tap_format_d_day_ago">Active %d day ago</string>
    <string name="tap_format_d_days_ago">Active %d days ago</string>
    <string name="tap_active_a_week_ago">Active a week ago</string>
    <string name="tap_format_s_last_active">Last active %s</string>
    <string name="tap_loading_new_messages">Loading New Messages</string>
    <string name="tap_delete_my_account">Delete My Account</string>
    <string name="tap_thank_you_using_taptalk">Thank you for using TapTalk!</string>
    <string name="tap_deleting_your_account">Deleting your account means:</string>
    <string name="tap_dot">•</string>
    <string name="tap_wording_delete_account1">Delete your account info and profile photo from TapTalk.</string>
    <string name="tap_wording_delete_account2">Delete all your messages.</string>
    <string name="tap_wording_delete_account3">Delete you from all TapTalk groups.</string>
    <string name="tap_wording_delete_account4">You can’t retrieve your access to your account when you activate with the same number.</string>
    <string name="tap_tell_us_dots">Tell us why you’re leaving...</string>
    <string name="tap_wording_accpet_agreement">I understand that all my messages, my contacts and my account info will be deleted.</string>
    <string name="tap_warning_delete_account">Once you confirm, all your account data will be permanently deleted.</string>
    <string name="tap_report_user_description_wording">You may report a user if you find them inappropriate, please choose one of the reason so we know how to handle this properly.</string>
    <string name="tap_why_report_user">Why do you want to report this user? (Optional)</string>
    <string name="tap_tell_us_why_dots">Tell us why...</string>
    <string name="tap_please_specify_reason">Please specify your reason</string>
    <string name="tap_this_field_is_required">This field is required.</string>
    <string name="tap_submit_report">Submit Report</string>
</resources>